[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Objects/Crate.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

[node name="KinematicBody2D" type="RigidBody2D"]
collision_layer = 8
collision_mask = 7
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -10.0
margin_right = 10.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ConnectPointTop" type="PinJoint2D" parent="."]
visible = false
position = Vector2( 0, -10 )

[node name="ConnectPointRight" type="PinJoint2D" parent="."]
visible = false
position = Vector2( 10, 0 )

[node name="ConnectPointBottom" type="PinJoint2D" parent="."]
visible = false
position = Vector2( 0, 10 )

[node name="ConnectPointLeft" type="PinJoint2D" parent="."]
visible = false
position = Vector2( -10, 0 )
